-------------------------------------------------------------------------------------------------------
Release notes version 1.7.9_beta : Enhancements, modifications and corrected bugs since version 1.7.8 :
-------------------------------------------------------------------------------------------------------
23/04/19 (TRUST)  New keyword : Block_Jacobi_ILU PETSc preconditioner (adapted to non symmetric linear system)
23/04/19 (TRUST)  New keyword : Cholesky_Mumps_BLR PETSc solver (reduced memory and faster factorization)
18/04/19 (TRUST)  New feature : Internal mesher is now able to build meshes with tanh variations in X and/or Y and/or Z directions.
18/04/19 (TRUST)  Minor change: Keywords tanh, tanh_dilatation and tanh_taille_premiere_maille are renamed to ytanh, ytanh_dilatation and ytanh_taille_premiere_maille
17/14/19 (TRUST)  New Option  : Allow the user to add a valgrind suppression file (-suppressions_val file_name)
16/04/19 (TRUST)  Bug fixed   : Fix of post-processing time for fields defined with Champ_Uniforme_Morceaux_Tabule_temps
04/04/19 (TRUST)  Portability : Fedora 29 and GNU compilers 8.2.1 supported
29/03/19 (TRUST)  Portability : MEDCoupling library is now mandatory to build Trust so -disable-med and -disable-medcoupling options are removed from the configure
29/03/19 (TRUST)  Bug fixed   : Several PETSc CLI solvers can't be used together
13/03/19 (TRUST)  Bug fixed   : Axial symmetry was not functionnal with bidim_axi keyword when reading a 2D MED mesh
20/02/19 (TRUST)  Bug fixed   : Y+ computation homogeinization for .lata and Ustar.face 
13/02/19 (TRUST)  New keyword : Add flux_surfacique_bords option to Morceau_equation keyword to post-process surfacic fluxes on boundaries
05/02/19 (TRUST)  New keyword : Adding possibility to specify maximum number of iteration for the generic "GEN" solver
25/01/19 (TRUST)  Bug fixed   : File evol_glob for quasi-compressible calculation renamed datacase_pbname.evol_glob