@@ -1,0 +1,5 @@
+0. 2
+1. 2.
+2. 2.
+4. -1.
+10 -1.
