@@ -1,0 +1,2 @@
+dimension 2
+lata_to_other med extrait.lata Puissance
