@@ -1,0 +1,17 @@
+LATA_V2.1 Trio_U Version1.6 or later
+champ_tabule_temps
+Trio_U verbosity=0
+Format BINAIRE,LITTLE_ENDIAN,INT32,F_INDEXING,C_ORDERING,F_MARKERS_SINGLE,REAL32
+GEOM dom type_elem=RECTANGLE
+CHAMP SOMMETS champ_tabule_temps.lata.dom.0.0 geometrie=dom size=10 composantes=2
+CHAMP ELEMENTS champ_tabule_temps.lata.dom.0.0.elem geometrie=dom size=4 composantes=4 format=INT32
+GEOM dom_boundaries_Gauche type_elem=SEGMENT
+CHAMP SOMMETS champ_tabule_temps.lata.dom_boundaries_Gauche.0.0 geometrie=dom_boundaries_Gauche size=10 composantes=2
+CHAMP ELEMENTS champ_tabule_temps.lata.dom_boundaries_Gauche.0.0.elem geometrie=dom_boundaries_Gauche size=10 composantes=2 format=INT32
+TEMPS 1.00000000e+00
+Champ PUISSANCE_VOLUMIQUE champ_tabule_temps.lata.PUISSANCE_VOLUMIQUE.ELEM.dom.1.0000000000 geometrie=dom localisation=ELEM size=4 nature=scalar noms_compo=PUISSANCE_VOLUMIQUE_ELEM_dom0 composantes=1
+TEMPS 2.00000000e+00
+Champ PUISSANCE_VOLUMIQUE champ_tabule_temps.lata.PUISSANCE_VOLUMIQUE.ELEM.dom.2.0000000000 geometrie=dom localisation=ELEM size=4 nature=scalar noms_compo=PUISSANCE_VOLUMIQUE_ELEM_dom0 composantes=1
+TEMPS 4.00000000e+00
+Champ PUISSANCE_VOLUMIQUE champ_tabule_temps.lata.PUISSANCE_VOLUMIQUE.ELEM.dom.4.0000000000 geometrie=dom localisation=ELEM size=4 nature=scalar noms_compo=PUISSANCE_VOLUMIQUE_ELEM_dom0 composantes=1
+FIN
