@@ -1,0 +1,3 @@
+
+
+sed "s/champ_tabule_temps 1   { 3  1. 2. 4.  2. 2. -1. }/champ_fonc_med_tabule use_existing_domain Puissance.med dom PUISSANCE_VOLUMIQUE elem -1000./"  champ_tabule_temps.data > champ_tabule_med.data
