@@ -1,3 +1,4 @@
+XX/XX/19 (TRUST)  New keyword : Champ_Fonc_MED_Tabule to interpolate each time step among a list of fields from a MED file
 -------------------------------------------------------------------------------------------------------
 Release notes version 1.7.9_beta : Enhancements, modifications and corrected bugs since version 1.7.8 :
 -------------------------------------------------------------------------------------------------------
